개인정보와 이용약관 안내 수정

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -10,6 +10,14 @@ body {
   cursor: pointer;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 .w900 {
   font-weight: 900;
+}
+
+.w700 {
+  font-weight: 700;
 }
