--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,6 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css");
 
 body {
+  overflow-x: hidden;
   font-family: "Pretendard Variable";
   padding: 0;
   margin: 0;
