--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,4 +1,4 @@
-a {
+#prevButton {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -66,7 +66,7 @@ a {
   padding-right: 3.5vw;
   padding-left: 3.5vw;
   height: calc(7vh - 4px);
-  position: fixed;
+  position: absolute;
   top: 7vh;
   right: 0;
   transition-duration: 0.3s;
