--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -21,6 +21,7 @@
 }
 
 #leftArrow {
+  margin-right: 0.4em;
   height: 2vh;
 }
 
@@ -47,6 +48,7 @@
 }
 
 #expandArrow {
+  margin-left: 0.4em;
   transition-duration: 0.3s;
   transform: rotate(180deg);
 }
@@ -78,7 +80,7 @@
 }
 
 #logo {
-  height: 4vh;
+  height: 3vh;
 }
 
 #logoText {
